
- added support for 3rd party extensions in the group management and dynamic menu system. (ptaylor)
  - Thanks to Leo Fante for code modifications

- changes in Captive portal (jdegraeve):
  - Fixes a bug in the way we handle authentication mechanism. (Potentially allowing double logins and faulty locking)
  - Add support for different MAC formatting styles.

1.22
----

- updated base system to FreeBSD 4.11-RELEASE-p16 (mkasper)

- updated Dnsmasq to 2.27

- added Role-based Access to WebGUI (ptaylor)
  - added Group and User Manager pages
  - updated menu system to be dynamic depending upon permissions of active user 

- added "support for 3rd DNS server" (jdegraeve)

- updated radius_accounting.inc to PECL (jdegraeve)
  - Now sends NAS-IP-Address (based on actual WAN-address) and NAS-Identifier cleanly
  - Each gigawords value now counts as 4GB instead of 2GB (See RFC 2866 section 5)

- changes in Captive portal (jdegraeve):
  - Cleanup and code added to allow FUTURE stuff like volume limits etc. to be implemented
  - Added User Volume Stats in captive portal status page
  - RADIUS mac authentication now works on local subnet even if "Disable MAC filtering" is activated
  - Firewall ruleno now uses a more intelligent pool, this fixes a bug where a ruleno could be used even if it is already been assigned
  - Fixed bug in RADIUS Session-Timeout handling so it'll also work even if reauthentication is disabled

- added "disable port mapping" option to advanced outbound NAT (helps with certain IPsec
  VPN gateways that insist on the IKE source port being 500) (mkasper)

- updated PHP to 4.4.2 (mkasper)

- updated ipsec-tools to 0.6.5 (fixes problem with /32 subnets) (mkasper)

- added option to System: Advanced page to allow IPsec/ESP-encrypted IP fragments to be passed (mkasper)

- added DHCP/interface route fix for UK ADSL half-bridge modems (DSL-300T, X-modem) (mkasper)

- fixed check for overlapping external port ranges when editing inbound NAT entries (mkasper)
